wordpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - image: wordpress
        name: wordpress
        ports:
        - containerPort: 8080
          name: wordpress
        volumeMounts:
        - name: wp-vol
          mountPath: /var/www/html
      volumes:
      - name: wp-vol
        persistentVolumeClaim:
          claimName: wp-pvc
