wordpress-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-np 
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 31111
  selector:
    app: wordpress
